[gd_scene load_steps=10 format=3 uid="uid://dyarxgnmiw66q"]

[ext_resource type="Texture2D" uid="uid://bqwexe1go8gd5" path="res://addons/placeholders/circle.png" id="1_gjyuu"]
[ext_resource type="Script" path="res://entities/void_creature.gd" id="1_r21ie"]
[ext_resource type="Texture2D" uid="uid://cdqftpb6l2ib5" path="res://assets/art/eye/idle/idle_eye_0.png" id="3_g6r5n"]
[ext_resource type="Texture2D" uid="uid://3hbk4a17fqh5" path="res://assets/art/eye/blink/blink_eye_0.png" id="3_pncmy"]
[ext_resource type="Texture2D" uid="uid://br5tx8ae8u2yi" path="res://assets/art/eye/idle/idle_eye_1.png" id="4_txqmr"]
[ext_resource type="Texture2D" uid="uid://dpgh5iol6cxdd" path="res://assets/art/eye/blink/blink_eye_1.png" id="4_vsmki"]
[ext_resource type="Texture2D" uid="uid://ctdq4wjpg5hov" path="res://assets/art/eye/blink/blink_eye_2.png" id="5_ryejc"]
[ext_resource type="Texture2D" uid="uid://huywyqyfvskr" path="res://assets/art/eye/blink/blink_eye_3.png" id="6_cdiqs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cf10s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_pncmy")
}, {
"duration": 1.0,
"texture": ExtResource("4_vsmki")
}, {
"duration": 1.0,
"texture": ExtResource("5_ryejc")
}, {
"duration": 1.0,
"texture": ExtResource("6_cdiqs")
}, {
"duration": 1.0,
"texture": ExtResource("5_ryejc")
}, {
"duration": 1.0,
"texture": ExtResource("4_vsmki")
}],
"loop": false,
"name": &"Blink",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_g6r5n")
}, {
"duration": 1.0,
"texture": ExtResource("4_txqmr")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="VoidCreature" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_r21ie")

[node name="Void" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_gjyuu")

[node name="EyeL" type="AnimatedSprite2D" parent="."]
position = Vector2(28, -24)
scale = Vector2(0.90625, 0.90625)
sprite_frames = SubResource("SpriteFrames_cf10s")
animation = &"Blink"
autoplay = "Idle"

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="animation_finished" from="EyeL" to="." method="_on_eye_l_animation_finished"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
